# amarukusi

./: .gitignore  Cargo.toml  Makefile  README.md  amarukusi.js  index.html  justfile  shell.nix
doc/: README.md
doc/es/: laws.typ
pkg/: app.js  app_bg.wasm
src/: lib.rs
src/game/: board.rs  canvas.rs  mod.rs  notation.rs  pieces.rs  player.rs
